[gd_scene load_steps=10 format=4 uid="uid://bqcnfm8jmfudk"]

[ext_resource type="Script" uid="uid://oomfd2vi3xum" path="res://main.gd" id="1_g6vr5"]
[ext_resource type="Script" uid="uid://dbdek77fd1vvc" path="res://tile_manager/tile_manager.gd" id="1_svxp8"]
[ext_resource type="Resource" uid="uid://ece5gxfyqdck" path="res://tiles/void.tres" id="3_272bh"]
[ext_resource type="TileSet" uid="uid://b46jehrcjutsp" path="res://tiles/tileset.tres" id="3_c54w1"]
[ext_resource type="Script" uid="uid://33mv7pq6o6rf" path="res://tiles/tile_resource.gd" id="3_kek77"]
[ext_resource type="Resource" uid="uid://800oguy2msjq" path="res://tiles/floor.tres" id="4_5vw27"]
[ext_resource type="Resource" uid="uid://cxbqex62q5ggv" path="res://tiles/wall.tres" id="5_kek77"]
[ext_resource type="PackedScene" uid="uid://b42lp1dnvoi7r" path="res://actors/player.tscn" id="6_5vw27"]
[ext_resource type="Script" uid="uid://befakoyjexkps" path="res://camera_2d.gd" id="6_114rw"]

[node name="Game" type="Node2D"]
script = ExtResource("1_g6vr5")

[node name="TileManager" type="Node" parent="."]
script = ExtResource("1_svxp8")
map_size = Vector2i(16, 14)
tile_resources = Dictionary[String, ExtResource("3_kek77")]({
"floor": ExtResource("4_5vw27"),
"void": ExtResource("3_272bh"),
"wall": ExtResource("5_kek77")
})

[node name="Player" parent="TileManager" instance=ExtResource("6_5vw27")]
position = Vector2(62, 46)
grid_position = Vector2i(10, 10)

[node name="TerrainLayer" type="TileMapLayer" parent="TileManager"]
z_index = -1
tile_map_data = PackedByteArray("AAD8/wAAAQAhAA0AAAD9/wAAAQAiAA8AAAD+/wAAAQAiAA8AAAD//wAAAQAiAA8AAAAAAAAAAQAiAA8AAAABAAAAAQAiAA8AAAACAAAAAQAiAA8AAAADAAAAAQAjAA0AAAD8/wEAAQAhAA4AAAD8/wIAAQAhAA4AAAD8/wMAAQAhAA4AAAD8/wQAAQAhAA8AAAD9/wQAAQAiAA8AAAD+/wQAAQAiAA8AAAD//wQAAQAiAA8AAAAAAAQAAQAiAA8AAAABAAQAAQAiAA8AAAACAAQAAQAiAA8AAAADAAQAAQAjAA8AAAADAAMAAQAjAA4AAAADAAIAAQAjAA4AAAADAAEAAQAjAA4AAAD9/wEAAQARABEAAAD9/wIAAQARABEAAAD+/wMAAQARABEAAAD+/wIAAQARABEAAAD+/wEAAQARABEAAAD9/wMAAQARABEAAAD//wMAAQARABEAAAD//wIAAQARABEAAAD//wEAAQARABEAAAAAAAEAAQARABEAAAAAAAIAAQARABEAAAAAAAMAAQARABEAAAABAAMAAQARABEAAAABAAIAAQARABEAAAABAAEAAQARABEAAAACAAEAAQARABEAAAACAAIAAQARABEAAAACAAMAAQARABEAAAA=")
tile_set = ExtResource("3_c54w1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(94, 81)
zoom = Vector2(4, 4)
script = ExtResource("6_114rw")
zoom_max = 4.0
zoom_min = 1.0

[connection signal="move_requested" from="TileManager/Player" to="." method="_on_actor_move_requested"]
